--- a/templates/index.html
+++ b/templates/index.html
@@ -54,6 +54,8 @@
           <button id="place">place</button>
           <button id="transition">transition</button>
           <button id="arc">arc</button>
+          <button id="select">select</button>
+          <button id="exec">exec</button>
         </div>
       </fieldset>
     </div>
