--- a/templates/index.html
+++ b/templates/index.html
@@ -36,14 +36,14 @@
       <fieldset>
         <legend>Petri-Net</legend>
         <div class="controlgroup">
-          <button class="ctl" id="place">place</button>
-          <button class="ctl" id="transition">transition</button>
-          <button class="ctl" id="arc">arc</button>
-          <button class="ctl" id="select">select</button>
-          <button class="ctl" id="inc_token">+token</button>
-          <button class="ctl" id="dec_token">-token</button>
-          <button class="ctl" id="exec">exec</button>
-          <button class="ctl" id="halt">halt</button>
+          <button class="select" id="select">select</button>
+          <button class="symbol" id="place">place</button>
+          <button class="symbol" id="transition">transition</button>
+          <button class="tool" id="arc">arc</button>
+          <button class="tool" id="inc_token">+token</button>
+          <button class="tool" id="dec_token">-token</button>
+          <button class="simulator" id="exec">exec</button>
+          <button class="simulator" id="halt">halt</button>
         </div>
       </fieldset>
     </div>
