simulator can now be reset

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,12 +37,14 @@
         <legend>Petri-Net</legend>
         <div class="controlgroup">
           <button class="select" id="select">select</button>
+          <button class="tool" id="delete">delete</button>
           <button class="symbol" id="place">place</button>
           <button class="symbol" id="transition">transition</button>
           <button class="tool" id="arc">arc</button>
           <button class="tool" id="inc_token">+token</button>
           <button class="tool" id="dec_token">-token</button>
           <button class="simulator" id="exec">exec</button>
+          <button class="simulator" id="reset">reset</button>
         </div>
       </fieldset>
     </div>
