can now delete places and transitions

--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
     </script>
 
     <!-- run the console app -->
-    <script type="text/python3" src="term.py"></script>
+    <script type="text/python3" src="app.py"></script>
   </div>
 </body>
 </html>
