--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,8 @@
 <head profile="http://www.w3.org/2005/10/profile">
     <title>bitwrap-brython</title>
     <meta charset="UTF-8">
-    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-    <meta content="utf-8" http-equiv="encoding">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="icon" type="image/png" href="https://bitwrap.io/image/bw-logo.png" />
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/cupertino/jquery-ui.css">
     <style>
@@ -23,43 +22,62 @@
 
     <script type="text/javascript" src="https://cdn.rawgit.com/brython-dev/brython/3.4.0/www/src/brython.js"> </script>
     <script type="text/javascript" src="https://cdn.rawgit.com/brython-dev/brython/3.4.0/www/src/brython_stdlib.js"> </script>
+
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+    <link rel="stylesheet" href="https://rawgithub.com/yesmeck/jquery-jsonview/master/dist/jquery.jsonview.css" />
+    <script type="text/javascript" src="https://rawgithub.com/yesmeck/jquery-jsonview/master/dist/jquery.jsonview.js"></script>
+
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.5.1/snap.svg-min.js" crossorigin="anonymous"></script>
 
     <script> var Bitwrap = { config: "{{ app_root }}/config/default.json" } </script>
 
-</head>
-<body onload="brython(1)">
-  <div id="tabs">
-    <div class="widget">
-      <fieldset>
-        <legend>Petri-Net</legend>
-        <div class="controlgroup">
-          <button class="select" id="select">select</button>
-          <button class="tool" id="delete">delete</button>
-          <button class="symbol" id="place">place</button>
-          <button class="symbol" id="transition">transition</button>
-          <button class="tool" id="arc">arc</button>
-          <button class="tool" id="inc_token">+token</button>
-          <button class="tool" id="dec_token">-token</button>
-          <button class="simulator" id="exec">exec</button>
-          <button class="simulator" id="reset">reset</button>
-        </div>
-      </fieldset>
-    </div>
-
-    <svg id="net" width="100%" height="700px" xmlns="http://www.w3.org/2000/svg"></svg>
-
-    <textarea id=code class=codearea rows=10 style="height: 100%; width: 100%"></textarea>
-
     <!-- init the ui -->
     <script>
+    $( function() {
       $('#tabs').tabs();
+    });
     </script>
 
     <!-- run the console app -->
     <script type="text/python3" src="main.py"></script>
+
+</head>
+<body onload="brython(1)">
+  <div id="tabs">
+    <ul>
+      <li><a href="#tabs-1">Editor</a></li>
+      <li><a href="#tabs-2">Json</a></li>
+    </ul>
+
+    <div id="#tabs-1">
+      <div class="widget">
+        <fieldset>
+          <legend>Petri-Net</legend>
+          <div class="controlgroup">
+            <button class="select" id="select">select</button>
+            <button class="tool" id="delete">delete</button>
+            <button class="symbol" id="place">place</button>
+            <button class="symbol" id="transition">transition</button>
+            <button class="tool" id="arc">arc</button>
+            <button class="tool" id="inc_token">+token</button>
+            <button class="tool" id="dec_token">-token</button>
+            <button class="simulator" id="exec">exec</button>
+            <button class="simulator" id="reset">reset</button>
+          </div>
+        </fieldset>
+      </div>
+
+      <svg id="net" width="100%" height="700px" xmlns="http://www.w3.org/2000/svg"></svg>
+      <textarea id=code class=codearea rows=10 style="height: 100%; width: 100%"></textarea>
+    </div>
+
+    <div id="#tabs-2">
+      <div id="json"></div>
+    </div>
+
   </div>
+
 </body>
 </html>
